
[TestNetworkRule_Default/✅_TargetPortNumber_is_nil - 1]
&v1alpha1.NetworkRule{
    Name:             "name",
    PortNumber:       1111,
    HTTPPath:         "/path",
    TargetPortNumber: &int32(1111),
    Host:             &"host",
    Group:            &"group",
    Public:           false,
}
---

[TestNetworkRule_Default/✅_TargetPortNumber_is_0 - 1]
&v1alpha1.NetworkRule{
    Name:             "name",
    PortNumber:       1111,
    HTTPPath:         "/path",
    TargetPortNumber: &int32(1111),
    Host:             &"host",
    Group:            &"group",
    Public:           false,
}
---

[TestNetworkRule_Default/✅_Public_is_true - 1]
&v1alpha1.NetworkRule{
    Name:             "name",
    PortNumber:       1111,
    HTTPPath:         "/path",
    TargetPortNumber: &int32(2222),
    Host:             &"host",
    Group:            &"group",
    Public:           true,
}
---

[TestNetworkRule_Default/✅_path_is_empty - 1]
&v1alpha1.NetworkRule{
    Name:             "name",
    PortNumber:       1111,
    HTTPPath:         "/",
    TargetPortNumber: &int32(2222),
    Host:             &"host",
    Group:            &"group",
    Public:           false,
}
---

[TestNetworkRule_Default/✅_group_is_nil - 1]
&v1alpha1.NetworkRule{
    Name:             "name",
    PortNumber:       1111,
    HTTPPath:         "path",
    TargetPortNumber: &int32(2222),
    Host:             &"host",
    Group:            &"name",
    Public:           false,
}
---

[TestNetworkRule_Default/✅_group_is_empty - 1]
&v1alpha1.NetworkRule{
    Name:             "name",
    PortNumber:       1111,
    HTTPPath:         "path",
    TargetPortNumber: &int32(2222),
    Host:             &"host",
    Group:            &"name",
    Public:           false,
}
---

[TestNetworkRule_ServicePort/✅_OK - 1]
{
 "name": "port1111",
 "port": 1111,
 "protocol": "TCP",
 "targetPort": 2222
}
---

[TestNetworkRulesByService/✅_OK - 1]
[]v1alpha1.NetworkRule{
    {
        Name:             "main",
        PortNumber:       7777,
        HTTPPath:         "/",
        TargetPortNumber: &int32(32000),
        Host:             (*string)(nil),
        Group:            &"main",
        Public:           false,
    },
    {
        Name:             "main2",
        PortNumber:       7778,
        HTTPPath:         "/",
        TargetPortNumber: &int32(32001),
        Host:             (*string)(nil),
        Group:            &"main2",
        Public:           false,
    },
}
---
